chore: add provider to composer config

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,13 @@
             "pestphp/pest-plugin": true
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "BarnsleyHQ\\SimplePush\\Providers\\SimplePushServiceProvider"
+            ]
+        }
+    },
     "scripts": {
         "post-autoload-dump": [
             "@php vendor/bin/testbench package:discover --ansi"
